[package]
name = "crosses-egui"
version = "0.1.0"
authors = ["TheOneFoxAgo <nikitad2005@gmail.com>"]
edition = "2021"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.76"

[dependencies]
egui = "0.28"
eframe = { version = "0.28", default-features = false, features = [
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }
log = "0.4"
crosses-core = { path = "../crosses-core" }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }

env_logger = "0.10"


[profile.release]
opt-level = 2

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2


[patch.crates-io]
